[package]
name = "sentry-mirror"
version = "0.0.1"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_yaml = "0.9.17"
url = "2.1.1"
regex = "1.10.4"
