[package]
name = "sentry-mirror"
version = "0.0.1"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.3", features = ["client", "http2", "http1"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_yaml = "0.9.17"
url = "2.1.1"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
simple_logger = "5.0.0"
hyper-tls = "0.6.0"
serde_json = "1.0.117"
flate2 = "1.0.30"
futures = "0.3.30"
